# thermal_core_sdk

ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/: README.txt  USB╥└└╡╣╪╧╡Interface dependency.xlsx  linux USB╜╙┐┌┐¬╖ó╦╡├≈╬─╡╡ Interface development instructions.docx  ─ú╫ΘSDK╜╙┐┌V1.5.xlsx
ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/libir SDK release/Windows/Win32/dll/: libircmd.lib  libirparse.lib  libiruvc.lib
ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/libir SDK release/Windows/Win32/lib/: libirprocess.lib  libirtemp.lib
ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/libir SDK release/Windows/x64/dll/: libirprocess.lib
ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/libir SDK release/Windows/x64/lib/: libircmd.lib  libirparse.lib  libirtemp.lib  libiruvc.lib
ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/libir SDK release/include/: libircmd.h  libirtemp.h
ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/libir_sample/: libir_sample.sln  sample_version.h
ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/libir_sample/cmd_sample/: CMakeLists.txt  README.md  README_EN.md  camera.cpp  camera.h  cmd.cpp  cmd.h  cmd_sample.vcxproj.filters  cmd_sample.vcxproj.xml  data.cpp  data.h  display.cpp  display.h  libs_version.txt  sample.cpp  sample.h
ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/libir_sample/cmd_sample/x64/Debug/cmd_sample/: cmd_sample.exe.recipe  cmd_sample.ilk  vc142.idb
ASIC_384_640_win_linux_USB_SDK_release_V2.5.6/libir_sample/cmd_sample/x64/Debug/cmd_sample/cmd_sample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
